@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.powermock</groupId>
         <artifactId>powermock</artifactId>
-        <version>0.6-SNAPSHOT</version>
+        <version>0.7-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -19,8 +19,44 @@
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-core</artifactId>
-            <version>0.6-SNAPSHOT</version>
+            <version>${version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.powermock.modules</groupId>
+            <artifactId>powermock-module-junit4-common</artifactId>
+            <version>${version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.powermock.modules</groupId>
+            <artifactId>powermock-module-junit4</artifactId>
+            <version>${version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.powermock.modules</groupId>
+            <artifactId>powermock-module-junit4-legacy</artifactId>
+            <version>${version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.powermock.modules</groupId>
+            <artifactId>powermock-module-junit3</artifactId>
+            <version>${version}</version>
+        </dependency>
+		<dependency>
+			<groupId>org.easymock</groupId>
+			<artifactId>easymock</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.easymock</groupId>
+			<artifactId>easymockclassextension</artifactId>
+			<scope>compile</scope>
+		</dependency>
+      <dependency>
+         <groupId>junit</groupId>
+         <artifactId>junit</artifactId>
+         <version>4.4</version>
+         <scope>compile</scope>
+      </dependency>
     </dependencies>
 
     <build>
@@ -29,13 +65,11 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                   <finalName>powermock-${version}</finalName>
-                    <descriptors>
-                        <descriptor>src/assembly/bin.xml</descriptor>
-                        <descriptor>src/assembly/bin-with-dependencies.xml</descriptor>
-      <!--
-                        <descriptor>src/assembly/buildable.xml</descriptor>
-      -->
-                    </descriptors>
+					<descriptors>
+						<descriptor>src/assemble/full.xml</descriptor>
+						<descriptor>src/assemble/src.xml</descriptor>
+						<descriptor>src/assemble/with-dependencies.xml</descriptor>
+					</descriptors>
                 </configuration>
                 <executions>
                     <execution>
