@@ -1,0 +1,28 @@
+<assembly>
+  <id>src</id>
+  <formats>
+    <format>zip</format>
+  </formats>
+  <fileSets>
+    <fileSet>
+      <directory>../core/src/main/java</directory>
+	  <outputDirectory></outputDirectory>
+    </fileSet>
+    <fileSet>
+      <directory>../modules/junit3/src/main/java</directory>
+	  <outputDirectory></outputDirectory>
+    </fileSet>
+    <fileSet>
+      <directory>../modules/junit4/src/main/java</directory>
+	  <outputDirectory></outputDirectory>
+    </fileSet>
+    <fileSet>
+      <directory>../modules/junit4-common/src/main/java</directory>
+	  <outputDirectory></outputDirectory>
+    </fileSet>
+    <fileSet>
+      <directory>../modules/junit4-test/src/main/java</directory>
+	  <outputDirectory></outputDirectory>
+    </fileSet>
+  </fileSets>
+</assembly>
